--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>подный гайд по игре бравл старс, если тф лошара</h2>
+						<h2>полный гайд по игре бравл старс, если ты лошара</h2>
 						<p>на случай если ты полный ноль<br />
 						</p>
 					</div>
@@ -151,7 +151,7 @@
 				<header>
 					<div class="container">
 						<h2>Вот и сказочке пришел конец</h2>
-						<p>Если хочешь словать троян,<br />
+						<p>Если хочешь словить троян,<br />
 						жми ниже</p>
 					</div>
 				</header>
